--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "async": "0.1.15",
       "aws-lib": "0.0.5",
       "express": "2.5.6",
+      "express-resource": "0.2.4",
       "cradle": "0.5.8"
    },
    "devDependencies": {
