--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
       "aws-lib": "0.0.5",
       "express": "2.5.6",
       "express-resource": "0.2.4",
-      "cradle": "0.5.8"
+      "cradle": "0.5.8",
+      "json-schema": "0.2.0",
+      "orderly": "1.0.1"
    },
    "devDependencies": {
       "jasmine-node": "1.0.20",
