--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "express": "2.5.6",
       "express-resource": "0.2.4",
       "cradle": "0.5.8",
+      "jsinc": "0.1.4",
       "json-schema": "0.2.0",
       "orderly": "1.0.1"
    },
